mettre en place les radios

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <header>
       <h1 class="header_title">Le syndrome de l'imposteur - Test de Clance</h1>
       <h2 class="header_subtitle">Tiré et traduit à partir de « The Impostor Phenomenon: When Success Makes You Feel Like A Fake, p20-22, P.R. Clance, 185 Toronto, Bantham Books. Coyright 1985 Pauline Rose Clance, PhD, ABPP.</h2>
-      <h2 class="header_explaination">Pour chaque question, cochez l’affirmation qui vous correspond le mieux. Répondez de la manière la plus intuitive possible.</h2>
     </header>
 
     <main id="content" class="content">
 
+      <h2 class="header_explaination">Pour chaque question, cochez l’affirmation qui vous correspond le mieux. Répondez de la manière la plus intuitive possible.</h2>
+
+      <div id="startBtnZone" class="startBtnZone">
       <button id="startBtn" type="button">Démarrer le test</button>
+      </div>
 
       <div id="testContent">
 
