ajout des styles résultat

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Syndrome de l'imposteur</title>
     <link rel="shortcut icon" href="./img/mtv-favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/reset.css">
+    <!--<link rel="stylesheet" href="./css/reset.css">-->
     <link rel="stylesheet" href="./css/style.css">
   </head>
 
@@ -17,12 +17,12 @@
 
     <main id="content" class="content">
 
-      <h2 class="header_explaination">Pour chaque question, cochez l’affirmation qui vous correspond le mieux. Répondez de la manière la plus intuitive possible.</h2>
-
       <div id="startBtnZone" class="startBtnZone">
       <button id="startBtn" type="button">Démarrer le test</button>
       </div>
-
+      
+      <h2 id="explaination"></h2>
+      
       <div id="testContent">
 
         <form id="testForm">
